<resources>
    <string name="app_name">Meteo Adviser</string>
    <string name="main_activity_humidity">Humidity: &#160;</string>
    <string name="main_activity_wind">Wind: &#160;</string>
    <string name="main_activity_current">Current</string>
    <string name="main_activity_location">location</string>
    <string name="main_activity_london">London</string>
    <string name="main_activity_paris">Paris</string>
    <string name="main_activity_new_york">New York</string>
    <string name="main_activity_tokyo">Tokyo</string>
    <string name="main_activity_m_sec"> m/sec </string>
    <string name="main_activity_percent">percent</string>
    <string name="main_activity_no_connection">No internet connection</string>
</resources>
