<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/teal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/teal"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/skyline"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/activity_main_name_of_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:textSize="20sp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center">

            <TextView
                android:id="@+id/activity_main_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp"/>

        </LinearLayout>

        <TextView
            android:id= "@+id/activity_main_temperature"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:textSize="130sp"
            android:layout_gravity="center" />

        <TextView
            android:id= "@+id/activity_main_description_of_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/main_activity_humidity"
                android:textSize="17sp"/>

            <TextView
                android:id= "@+id/activity_main_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="17sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/main_activity_wind"
                android:textSize="17sp"/>

            <TextView
                android:id= "@+id/activity_main_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="17sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/dark_teal"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp"
            android:gravity="center">

            <ImageView
                android:id= "@+id/activity_main_button_london"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/london_button"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/main_activity_london"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp"
            android:gravity="center">

            <ImageView
                android:id= "@+id/activity_main_button_paris"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/paris_button"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/main_activity_paris"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp"
            android:gravity="center">

            <ImageView
                android:id= "@+id/activity_main_button_current_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/compass"
                android:layout_marginBottom="5dp"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/main_activity_current"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/main_activity_location"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="7dp"
            android:layout_marginLeft="7dp"
            android:gravity="center">

            <ImageView
                android:id= "@+id/activity_main_button_new_york"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/new_york_button"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/main_activity_new_york"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp"
            android:gravity="center">

            <ImageView
                android:id= "@+id/activity_main_button_tokyo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/tokyo_button"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="@string/main_activity_tokyo"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>